--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <h2>Total: R$ <span id="total">0.00</span></h2>
     <div class="campo-pix">
   <p>Chave Pix:</p>
-  <span>ht1bec@gmail.com</span>
+  <span>jduartegestor@gmail.com</span>
   <button class="gerar" onclick="copiarChavePix()">Copiar Chave Pix</button>
 </div>
   </div>  <div id="itens"></div>  <script>
@@ -178,7 +178,7 @@
     }
 
     function gerarPix() {
-      const chave = "ht1bec@gmail.com";
+      const chave = "jduartegestor@gmail.com";
       const nome = "JADRE RENAUD DUARTE";
       const cidade = "Caicó";
       const valor = parseFloat(document.getElementById('total').innerText).toFixed(2);
