--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 	  function copiarChavePix() {
     // Cria um elemento de input temporário para copiar a chave Pix
     const tempInput = document.createElement('input');
-    tempInput.value = 'ht1bec@gmail.com'; // A chave Pix
+    tempInput.value = 'jduartegestor@gmail.com'; // A chave Pix
     document.body.appendChild(tempInput);
     tempInput.select();
     document.execCommand('copy');
